tests/rosetta/out/Pascal/calkin-wilf-sequence.error
parse: error[P040]: /workspace/mochi/tests/rosetta/x/Mochi/calkin-wilf-sequence.mochi:57:32: lexer: invalid input text "; s = s[1:] }\n  ..."
  --> /workspace/mochi/tests/rosetta/x/Mochi/calkin-wilf-sequence.mochi:57:32

 57 |   if s[0:1] == "-" { neg = true; s = s[1:] }
    |                                ^

help:
  String literals must be properly closed with a `"`.